# Options_LSLR

./: .gitignore  README.md  pyproject.toml  requirements.txt
.mplconfig/: fontlist-v390.json
docs/: week1_math_breakdown.md  week5_backward_induction.md  week6_validation_report.md
notebooks/: 01_lsm_paper_math_walkthrough.ipynb  02_gbm_and_european_baseline.ipynb  03_regression_engine_demo.ipynb  04_backward_induction_demo.ipynb
scripts/: run_week6_validation.py
src/: black_scholes.py  gbm.py  lsm_engine.py  main.py
src/lsm/: __init__.py  american.py  basis.py  black_scholes.py  config.py  regression.py  simulation.py  utils.py  validation.py
tests/: test_american.py  test_basis.py  test_black_scholes.py  test_regression.py  test_simulation.py  test_validation.py
